--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tsparticles/slim": "^3.4.0",
     "@uploadthing/react": "^6.6.0",
     "crypto-ts": "^1.0.2",
+    "emoji-picker-react": "^4.9.4",
     "framer-motion": "^11.2.10",
     "jsonwebtoken": "^9.0.2",
     "magnify-zone": "^1.7.4",
@@ -27,6 +28,8 @@
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5",
     "uploadthing": "^6.12.0"
   },
   "devDependencies": {
