--- a/package.json
+++ b/package.json
@@ -11,15 +11,18 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@formkit/auto-animate": "^0.8.2",
     "@mui/material": "^5.15.19",
     "@nextui-org/react": "^2.4.1",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.4.0",
+    "@types/react-scroll-to-bottom": "^4.2.5",
     "@uploadthing/react": "^6.6.0",
     "crypto-ts": "^1.0.2",
     "emoji-picker-react": "^4.9.4",
     "framer-motion": "^11.2.10",
     "jsonwebtoken": "^9.0.2",
+    "lottie-react": "^2.4.0",
     "magnify-zone": "^1.7.4",
     "mongodb": "^6.7.0",
     "mongoose": "^8.4.1",
@@ -27,10 +30,14 @@
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
     "react": "^18",
+    "react-auto-scroll-container": "^0.1.4",
     "react-dom": "^18",
+    "react-scroll-to-bottom": "^4.2.0",
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5",
-    "uploadthing": "^6.12.0"
+    "types": "^0.1.1",
+    "uploadthing": "^6.12.0",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/node": "^20",
