Created the main page of the website, created an mybids page and now a graph of bids is displayed but the ui needs to improved

--- a/package.json
+++ b/package.json
@@ -12,12 +12,18 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@formkit/auto-animate": "^0.8.2",
+    "@heroicons/react": "^2.1.4",
     "@mui/material": "^5.15.19",
     "@nextui-org/react": "^2.4.1",
+    "@plotex/render-image": "^1.0.21",
+    "@react-three/drei": "^9.107.2",
+    "@react-three/fiber": "^8.16.8",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.4.0",
+    "@types/chart.js": "^2.9.41",
     "@types/react-scroll-to-bottom": "^4.2.5",
     "@uploadthing/react": "^6.6.0",
+    "chart.js": "^4.4.3",
     "crypto-ts": "^1.0.2",
     "emoji-picker-react": "^4.9.4",
     "framer-motion": "^11.2.10",
@@ -29,9 +35,14 @@
     "next": "14.2.3",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
+    "nightmare": "^3.0.2",
+    "plot": "^1.0.22",
     "react": "^18",
     "react-auto-scroll-container": "^0.1.4",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
+    "react-icons": "^5.2.1",
+    "react-parallax": "^3.5.1",
     "react-scroll-to-bottom": "^4.2.0",
     "smooth-scrollbar": "^8.8.4",
     "socket.io": "^4.7.5",
