--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-icons": "^5.2.1",
     "react-parallax": "^3.5.1",
     "react-scroll-to-bottom": "^4.2.0",
+    "react-spring": "^9.7.3",
     "smooth-scrollbar": "^8.8.4",
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5",
