--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@datobs/react-image-magnifiers": "^1.4.8",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@formkit/auto-animate": "^0.8.2",
@@ -21,11 +22,13 @@
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.4.0",
     "@types/chart.js": "^2.9.41",
+    "@types/react-image-magnifiers": "^1.3.5",
     "@types/react-scroll-to-bottom": "^4.2.5",
     "@uploadthing/react": "^6.6.0",
     "chart.js": "^4.4.3",
     "chartjs-plugin-zoom": "^2.0.1",
     "crypto-ts": "^1.0.2",
+    "easy-magnify-waft": "^2.0.2",
     "emoji-picker-react": "^4.9.4",
     "framer-motion": "^11.2.10",
     "jsonwebtoken": "^9.0.2",
@@ -38,19 +41,22 @@
     "next-themes": "^0.3.0",
     "nightmare": "^3.0.2",
     "plot": "^1.0.22",
-    "react": "^18",
+    "react": "^18.3.1",
     "react-auto-scroll-container": "^0.1.4",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-image-magnifier-waft": "^1.0.2",
     "react-parallax": "^3.5.1",
     "react-scroll-to-bottom": "^4.2.0",
     "react-spring": "^9.7.3",
+    "simple-image-magnifier": "^1.0.10",
     "smooth-scrollbar": "^8.8.4",
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5",
     "types": "^0.1.1",
     "uploadthing": "^6.12.0",
+    "v2": "^0.0.3",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
