Changed UI of the chat page

--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@mui/material": "^5.15.19",
     "@nextui-org/react": "^2.4.1",
     "@plotex/render-image": "^1.0.21",
+    "@radix-ui/react-label": "^2.1.0",
     "@react-three/drei": "^9.107.2",
     "@react-three/fiber": "^8.16.8",
+    "@tabler/icons-react": "^3.11.0",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.4.0",
     "@types/chart.js": "^2.9.41",
@@ -27,10 +29,11 @@
     "@uploadthing/react": "^6.6.0",
     "chart.js": "^4.4.3",
     "chartjs-plugin-zoom": "^2.0.1",
+    "clsx": "^2.1.1",
     "crypto-ts": "^1.0.2",
     "easy-magnify-waft": "^2.0.2",
     "emoji-picker-react": "^4.11.0",
-    "framer-motion": "^11.2.10",
+    "framer-motion": "^11.3.19",
     "jsonwebtoken": "^9.0.2",
     "lottie-react": "^2.4.0",
     "magnify-zone": "^1.7.4",
@@ -48,12 +51,15 @@
     "react-icons": "^5.2.1",
     "react-image-magnifier-waft": "^1.0.2",
     "react-parallax": "^3.5.1",
+    "react-resizable-panels": "^2.0.22",
     "react-scroll-to-bottom": "^4.2.0",
     "react-spring": "^9.7.3",
+    "sharp": "^0.33.4",
     "simple-image-magnifier": "^1.0.10",
     "smooth-scrollbar": "^8.8.4",
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5",
+    "tailwind-merge": "^2.4.0",
     "types": "^0.1.1",
     "uploadthing": "^6.12.0",
     "v2": "^0.0.3",
